Adds implmentations and changes db script
