# backend/jvm/webapi/src/main/kotlin/pt/isel/leic/ps/qless/webapi/entities/CategoryTeam.kt
@@ -1,0 +1,34 @@
+package pt.isel.leic.ps.qless.webapi.entities
+
+import com.fasterxml.jackson.annotation.JsonProperty
+import io.swagger.v3.oas.annotations.media.Schema
+import jakarta.persistence.Entity
+import jakarta.persistence.GeneratedValue
+import jakarta.persistence.GenerationType
+import jakarta.persistence.Id
+import jakarta.persistence.Table
+
+/**
+ * 
+ * @param email 
+ * @param password 
+ * @param userId 
+ * @param username 
+ * @param fname 
+ * @param lname 
+ * @param role 
+ */
+@Entity
+@Table(name = "category_team")
+data class CategoryTeam(
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.UUID)
+    @Schema(example = "null", readOnly = true, description = "")
+    @get:JsonProperty("categpryId") val categoryId: java.util.UUID? = null,
+
+    @Schema(example = "null", description = "")
+    @get:JsonProperty("teamId") val teamId: java.util.UUID? = null,
+
+)
+
