# backend/jvm/webapi/src/main/kotlin/pt/isel/leic/ps/qless/webapi/entities/Message.kt
@@ -1,4 +1,4 @@
-package pt.isel.leic.ps.qless.webapi.models
+package pt.isel.leic.ps.qless.webapi.entities
 
 import com.fasterxml.jackson.annotation.JsonProperty
 import io.swagger.v3.oas.annotations.media.Schema
@@ -6,6 +6,7 @@ import jakarta.persistence.Entity
 import jakarta.persistence.GeneratedValue
 import jakarta.persistence.GenerationType
 import jakarta.persistence.Id
+import java.time.OffsetDateTime
 
 /**
  * 
@@ -21,7 +22,7 @@ data class Message(
     @Id
     @GeneratedValue(strategy = GenerationType.UUID)
     @Schema(example = "null", required = true, description = "")
-    @get:JsonProperty("messageId", required = true) val messageId: java.util.UUID,
+    @get:JsonProperty("messageId", required = true) val messageId: java.util.UUID? = null,
 
     @Schema(example = "null", required = true, description = "")
     @get:JsonProperty("ticketId", required = true) val ticketId: java.util.UUID,
@@ -35,6 +36,11 @@ data class Message(
     @Schema(example = "null", required = true, description = "")
     @get:JsonProperty("timestamp", required = true) val timestamp: java.time.OffsetDateTime
 ) {
+    companion object {
+        fun fromTicket(ticket: Ticket, comment: String): Message {
+            return Message(null, ticket.ticketId!!, ticket.openedBy!!.toString(),comment, OffsetDateTime.now() )
+        }
+    }
 
 }
 
